# capstone-medical-gen-ai

./: .coverage  README.md  docker-compose.yml  pytest.ini
Database/: .env.ex  (+4 more)
server/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
server/analytics/: models.py  serializers.py  urls.py  views.py
server/analytics/migrations/: 0001_initial.py  0002_remove_budgetusage.py
server/authentication/: backends.py  constants.py  middleware.py  mixins.py  models.py  serilizers.py  urls.py  utils.py  views.py
server/authentication/migrations/: 0001_initial.py  0002_alter_user_id.py  0002_user_google_refresh_token.py  0002_user_is_admin.py  0003_alter_user_id.py  0004_alter_user_id.py  0005_alter_user_id.py  0006_alter_user_id.py  0007_alter_user_id.py  0008_alter_user_id.py  0009_alter_user_id.py  0010_alter_user_id.py  0011_alter_user_id.py  0012_alter_user_id.py  0013_alter_user_id.py  0014_alter_user_id.py  0015_alter_user_id.py
server/base/: authentication.py  urls.py  views.py
server/betesbot/: asgi.py  pytest_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
server/core/: models.py  tests.py  urls.py  views.py
server/core/migrations/: 0001_initial.py  0002_alter_chat_id_alter_question_id.py  0003_alter_chat_id_alter_question_id.py  0004_alter_chat_unique_together_alter_question_citation_and_more.py  0005_alter_chat_id_alter_question_id.py  0006_alter_chat_id_alter_question_id.py  0007_alter_chat_id_alter_question_id.py  0008_alter_chat_id_alter_question_id.py  0009_alter_chat_id_alter_question_id.py  0010_alter_chat_id_alter_question_id.py  0011_alter_chat_id_alter_question_id.py  0012_alter_chat_id_alter_question_id.py  0013_alter_chat_id_alter_question_id.py  (+5 more)
server/documents/: upload_ingest.py  urls.py  views.py
server/pdf_processing/: file_writer.py  final_pdf_cleaner.py  ingest_service.py  pdf_extractor.py  section_chunker.py  text_cleaner.py  upload_ingest.py
server/tests/: conftest.py  helpers.py  test_analytics_views.py  test_auth_backend_middleware.py  test_auth_utils.py  test_auth_views.py  test_core_views.py  test_mixins_and_main.py  test_pdf_extractor.py  test_pdf_processing.py  test_text_cleaner.py
(+69 files in other folders)
